WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47753
REGRESSION(
r69850
) Loading apple.com/startpage in WebKit on Windows gets a bad request
https://bugs.webkit.org/show_bug.cgi?id=47753
Summary
REGRESSION(r69850) Loading apple.com/startpage in WebKit on Windows gets a ba...
Brian Weinstein
Reported
2010-10-15 16:38:56 PDT
STEPS TO REPRODUCE: 1) Go to
http://apple.com/startpage
EXPECTED RESULTS: The page loads. ACTUAL RESULTS: The page gets an error message with a bad request.
http://whatsmyuseragent.com
fails as well. The user agent is being sent with a bad request.
Attachments
[PATCH] Fix
(5.37 KB, patch)
2010-10-15 17:30 PDT
,
Brian Weinstein
sam
: review+
bweinstein
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-10-15 16:39:56 PDT
<
rdar://problem/8558242
>
Brian Weinstein
Comment 2
2010-10-15 17:30:10 PDT
Created
attachment 70928
[details]
[PATCH] Fix
Brian Weinstein
Comment 3
2010-10-15 17:51:34 PDT
Landed in
r69900
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug